BE/ytt/src/main/java/com/example/ytt/global/error/BaseException.java
package com.example.ytt.global.error;

import lombok.Getter;

@Getter
public class BaseException extends RuntimeException{
    private final ExceptionType exceptionType;

    protected BaseException(ExceptionType exceptionType) {
        super(exceptionType.getErrorMessage());
        this.exceptionType = exceptionType;
    }
}